# megaeth-analysis

./: 2026-01-20-can-you-understand-all-the-new-changes-12.txt  2026-01-23-this-session-is-being-continued-from-a-previous-co.txt  ANOMALIES_FOUND.md  FAILURE_ANALYSIS.md  FULL_ANOMALY_REPORT.md  MASSIVE_FAILURE_CLUSTER.md  README.md  SPIKE_ANALYSIS_REPORT.md  STRESS_TEST_DEEP_ANALYSIS.md  all_analyzed_transactions.csv  analyze-empty-blocks.mjs  analyze_historical.py  analyze_transactions.py  anomalies.csv  contract_gas_usage.csv  crash_analysis.csv  dense_failed_transactions.csv  expensive_transactions.csv  failed_blocks_detail.csv  failed_tx_details.csv  failure_cluster_blocks.csv  fetch_historical_data.py  historical_anomalies.csv  historical_blocks.csv  index.html  latency-data.json  megaeth-part1.csv  megaeth_spike_dashboard.html  miniblocks_metrics.csv  miniblocks_metrics_168h.json  package-lock.json  package.json  regenerate_smoking_guns.py  sample1.csv  sample2.csv  sample3.csv  sample4.csv  smoking_gun_1_worst_latency.csv  smoking_gun_2_correlated_drops.csv  smoking_gun_3_worst_moments.csv  (+13 more)
api/: .env.example  .gitignore  AUTOMATION_GUIDE.md  COMPLETE_SOLUTION.md  CONTRACT_IDENTIFICATION_DESIGN.md  Cargo.toml  HOW_TO_ADD_CONTRACT_NAMES.md  MEGAETH_NATIVE_DETECTION.md  QUESTDB_PLAN.md  QUICK_START.md  REPLAY_METRICS.md  SYSTEM_SUMMARY.md  bytecode_database.json  contracts.json  contracts_template.md
api/scripts/: build_bytecode_database.py  convert_growthpie_to_contracts.py  demo_contract_identification.py  fetch_growthpie_contracts.sh  run_contract_detection.py
(+120 files in other folders)
